--- a/visualizar-estabelecimento.html
+++ b/visualizar-estabelecimento.html
@@ -69,16 +69,16 @@
 			<div id="page-wrapper" >
 				<div id="page-inner">
 					<div class="row">
-						<h2 id="tituloEstabelecimento" style="color: #000; font-size: 18px; font-weight: bold; padding: 0px 0px 12px 15px;"></h2>
-						<h3 style="color: #000; font-size: 18px; padding: 0px 0px 12px 15px;">Bairro:</h3>
-						<p id="bairro" style="padding: 0px 0px 12px 15px;"></p>
-						<h3 style="color: #000; font-size: 18px; padding: 0px 0px 12px 15px;">Cidade:</h3>
-						<p id="cidade" style="padding: 0px 0px 12px 15px;"></p>
-						<h3 style="color: #000; font-size: 18px; padding: 0px 0px 12px 15px;">Unidade:</h3>
-						<p id="numero" style="padding: 0px 0px 12px 15px;"></p>						
+						<h2 id="tituloEstabelecimento" style="color: #428bca; font-size: 25px; font-weight: bold; padding: 0px 0px 0px 15px;"></h2>
+						<h3 style="color: orange; font-size: 20px; padding: 0px 0px 0px 15px;">Bairro:</h3>
+						<p id="bairro" style="padding: 0px 0px 0px 15px;"></p>
+						<h3 style="color: orange; font-size: 20px; padding: 0px 0px 0px 15px;">Cidade:</h3>
+						<p id="cidade" style="padding: 0px 0px 0px 15px;"></p>
+						<h3 style="color: orange; font-size: 20px; padding: 0px 0px 0px 15px;">Unidade:</h3>
+						<p id="numero" style="padding: 0px 0px 0px 15px;"></p>						
 						</p>
 						
-						<a href="listas.html" type="button" class="btn btn-primary" style="float: right;" onclick="controleCheckin('estabelecimento');">
+						<a href="listas.html" type="button" class="btn btn-primary" style="float: right;" onclick="checkinEstab();">
 							Checkin
 						</a>				
 					</div> 					 	
