--- a/visualizar-lista.html
+++ b/visualizar-lista.html
@@ -130,7 +130,7 @@
 			var ano = data.getFullYear();  
 			$("#dataAtual").html("Data: "+dia+"/"+mes+"/"+ano); 
 		</script>   
-		<!-- Modal listar estabelecimento -->
+		<!-- Modal listar estabelecimento mais barato -->
 		<div class="modal fade" id="exibir_estabelecimento" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
