--- a/atualizarUsuario.html
+++ b/atualizarUsuario.html
@@ -45,7 +45,7 @@
 							<div class="form-group">
 								<input type="password" class="form-control" placeholder="Confirmar nova senha" id="confirmarSenha" maxlength="32" value=""/>
 							</div>							
-							<button type="button" class="btn btn-primary" style="width: 100%;" onclick="atualizarSenhaUsuario()">Atualizar</button>
+							<button type="button" class="btn btn-primary" style="width: 100%;margin-left:0px;" onclick="atualizarSenhaUsuario()">Atualizar</button>
 							<p style="text-decoration:underline;">
 								<a href="perfil.html" >Voltar</a>
 							</p>						 
