--- a/estabelecimento.html
+++ b/estabelecimento.html
@@ -72,7 +72,7 @@
 				<div id="page-inner">					  
 					<div class="row">
 						<h2 style="color: #000; font-size: 18px; font-weight: bold; padding: 0px 0px 12px 15px;">Estabelecimentos:</h2>
-						<p id="nomeEstabelecimento" style="margin-left:15px">
+						<p id="nomeEstabelecimento">
 						</p>
 						<button type="button" class="btn btn-primary" style="float: right;" data-toggle="modal" data-target="#cadastrar_estabelecimento">
 							Adicionar estabelecimento
@@ -95,7 +95,7 @@
 						<form class="form-horizontal" role="form">
 							<div class="form-group" style="margin-bottom: 20px;">
 								<div class="col-sm-10">
-								<label for="inputPassword3" class="col-sm-2 control-label">Nome do estabelecimento:</label>                           
+								<label for="inputPassword3" style="right: 15px;" class="col-sm-2 control-label">Nome do estabelecimento:</label>                           
 									<input class="form-control" type="text" placeholder="Nome do estabelecimento" id="nome">
 								</div>
 								<label for="inputPassword3" class="col-sm-2 control-label">Bairro:</label>
@@ -115,7 +115,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-						<button type="submit" class="btn btn-primary" onclick="cadastrarEstabelecimento()">Cadastrar estabelecimento</button>
+						<button type="submit" class="btn btn-primary" onclick="cadastrarEstabelecimento()">Cadastrar</button>
 					</div>
 				</div>
 			</div>
