--- a/estabelecimento.html
+++ b/estabelecimento.html
@@ -24,6 +24,7 @@
 			window.onload = function(){
 				verificarLogin("estabelecimento");
 				listarEstabelecimento();
+				getLocation();
 			}
 		</script> 	
 	</head>
@@ -183,6 +184,22 @@
 			var ano = data.getFullYear();  
 			$("#dataAtual").html("Data: "+dia+"/"+mes+"/"+ano); 
 	   </script>   
+	   <script>
+			function getLocation() {
+				window.localStorage.lat = -5.812148;
+				window.localStorage.lon = -35.203833;
+				if (navigator.geolocation) {
+					navigator.geolocation.getCurrentPosition(showPosition);
+				} else { 
+					x.innerHTML = "Geolocation is not supported by this browser.";
+				}
+			}
+
+			function showPosition(position) {
+				window.localStorage.lat = position.coords.latitude;
+				window.localStorage.lon = position.coords.longitude;
+			}
+		</script>
 	</body>
 </html>
 	
