--- a/visualizar-itens.html
+++ b/visualizar-itens.html
@@ -69,7 +69,8 @@
 			<div id="page-wrapper" >
 				<div id="page-inner">					  
 					<div class="row">
-						<h2 style="color: #000; font-size: 18px; font-weight: bold; padding: 0px 0px 12px 15px;"> Detalhes do Produto:</h2>					  
+						<h2 style="color: #000; font-size: 18px; font-weight: bold; padding: 0px 0px 12px 15px;"> Detalhes do Produto:</h2>		
+						<h1 id="iten_nome" style="margin-left: 16px;color: orange;font-weight: bold;"></h1>	
 						<p id="referencia"></p>					
 					</div>		 					 	
 				</div>             
