--- a/principal.html
+++ b/principal.html
@@ -19,6 +19,7 @@
 		<script src="assets/js/WS/usuarioWS.js"></script> 
 		<script src="assets/js/WS/checkinWS.js"></script> 
 		<script src="assets/js/WS/listaWS.js"></script> 
+		<script src="assets/js/WS/produtoWS.js"></script> 
 		<!-- FUNCOES PRE-REALIZADAS -->
 		<script type="text/javascript">
 			window.onload = function(){
@@ -106,7 +107,7 @@
 						<div class="col-md-3 col-sm-6 col-xs-6">           
 							<div class="panel panel-back noti-box">
 								<div>
-									<a href="produtos.html"><img src="assets/img/produtos.png" width="60px" height="90px"></a>
+									<a href="produtos.html" onclick="pesquisarPrincipal()"><img src="assets/img/produtos.png" width="60px" height="90px"></a>
 								</div>
 									<p class="main-text">Produtos</p>
 									<p class="text-muted">Produtos cadastrados</p>
