Função de finalizar checkin
Não está completamente finalizado....

--- a/checkinProdutos.html
+++ b/checkinProdutos.html
@@ -77,7 +77,10 @@
 							
 							<button type="button" class="btn btn-primary" style="float: right;margin-top: 15px;" onclick="mostrarPesquisa();">
 								Q
-							</button>						
+							</button>	
+                            <button type="button" class="btn btn-primary" style="float: right;margin-top: 15px;" id="finalizarCheckin">
+                                Finalizar checkin
+                            </button>						
 							<button id="botaoLoucao" type="button" class="btn btn-primary" style="float: right; display: none; margin-top: 15px;" onclick="procurarProduto('1');">
 								Procurar Produto
 							</button>
